Preserve deterministic experiment metadata ordering (#139)